--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Tailwind Project</title>
+    <title>Image Gallery</title>
 </head>
 <body>
-    <h1 class="text-5xl bg-red-400 p-4 text-center font-medium capitalize">hello tailwind css</h1>
+    
 </body>
 </html>
